# MongoDB-As-a-Service-SSPL

./: .gitignore  00-config-files.txt  LICENSE.md  README.en.md  README.zh-hant.md  hosts.tmpl  pyproject.toml
cloud-scripts/: vultr-debian.sh
docker/: docker-compose.yaml  docker_compose.env.tmpl
docs/: 00-Motivation.en.md  00-Motivation.md  00-Motivation.zh-hant.md  01-FAQ.en.md  01-FAQ.md  01-FAQ.zh-hant.md  02-Planning.en.md  02-Planning.md  02-Planning.zh-hant.md
playbooks/: 00-init.yaml  init-apt.yaml  init-docker.yaml  init-mongodb.yaml  iptables.yaml
playbooks/templates/init-mongodb/: cron-restart-mongo
scripts/: 00-init.sh  01-restart-db.sh
